# template-adk-agent

./: .gitignore  README.md  pyproject.toml
agent_name/: .env.example  __main__.py  agent.py  agent_executor.py  config.py  prompt.py
agent_name/tools/: __init__.py  first_tool.py
